--- a/src/com/cyrusian/academic/sra/i18n/i18n_en.properties
+++ b/src/com/cyrusian/academic/sra/i18n/i18n_en.properties
@@ -1,1 +1,11 @@
 ApplyingSystemUIFailed=Attempt to change application UI to System UI has failed.
+
+MenuGame=Game
+MenuGameNewSingle=New Singleplayer
+MenuGameNewMulti=New Multiplayer
+MenuGameGiveUp=Give Up
+MenuGameExit=Exit
+MenuDifficulty=Difficulty
+MenuDifficultyBasic=Basic
+MenuDifficultyAdvanced=Advanced
+MenuDifficultyExtreme=Extreme
