말 규칙 넣는 중. 아직 체크 시의 규칙은 안 넣었음.

--- a/src/com/cyrusian/academic/sra/i18n/i18n_en.properties
+++ b/src/com/cyrusian/academic/sra/i18n/i18n_en.properties
@@ -3,6 +3,7 @@ ApplyingSystemUIFailed=Attempt to change application UI to System UI has failed.
 MenuGame=Game
 MenuGameNewSingle=New Singleplayer
 MenuGameNewMulti=New Multiplayer
+MenuGameJoinMulti=Join Multiplayer
 MenuGameGiveUp=Give Up
 MenuGameExit=Exit
 MenuDifficulty=Difficulty
