--- a/src/com/cyrusian/academic/sra/i18n/i18n_ko.properties
+++ b/src/com/cyrusian/academic/sra/i18n/i18n_ko.properties
@@ -3,6 +3,7 @@ ApplyingSystemUIFailed=\uc751\uc6a9 \ud504\ub85c\uadf8\ub7a8 \uc778\ud130\ud398\
 MenuGame=\uac8c\uc784 (G)
 MenuGameNewSingle=\uc0c8 \uac8c\uc784 (S)
 MenuGameNewMulti=\uc0c8 \ub124\ud2b8\uc6cc\ud06c \uac8c\uc784 (M)
+MenuGameJoinMulti=\ub124\ud2b8\uc6cc\ud06c \uac8c\uc784\uc5d0 \ucc38\uc5ec (J)
 MenuGameGiveUp=\uae30\uad8c (U)
 MenuGameExit=\uc885\ub8cc (X)
 MenuDifficulty=\ub09c\uc774\ub3c4 (D)
